--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "nuxt": "^4.0.3",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1",
